restrict select selector to the block options to stop wrapping the undo and redo buttons

--- a/resources/assets/sass/components/fields/_select.scss
+++ b/resources/assets/sass/components/fields/_select.scss
@@ -1,3 +1,3 @@
-.el-select {
+.block-options-list .el-select {
 	width: 100%;
 }
